# cuda_matmul

./: README.md
src/: CMakeLists.txt  __init__.py  baseline_mm.cu  baseline_mm.cuh  custom_mm.cpp  naive_reducer.cuh  naive_sparse_mm.cu  naive_sparse_mm.cuh  setup.py  sparse_mm.cu  utils.cuh
src/custom_mm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/matmul/: blockedell.py  blockedell_linear.py
test/: __init__.py  block_sparse_test.py
test/blocksparse_cuda/: Makefile  matmul.cpp  spmm_blockedell_example
test/finegrained_cuda/: CMakeLists.txt  Makefile  README.md  finegrained  matmul.cpp
transformer/: __init__.py  sparse_attention.py  sparseselfattention.py
